<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingStart="40dp"
    android:paddingEnd="40dp"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:contentDescription="@string/title_description"
        android:text="@string/title"
        android:textAppearance="@style/TextAppearance.AppCompat.Headline"
        app:layout_constraintBottom_toTopOf="@+id/category"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Spinner
        android:id="@+id/category"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:layout_marginBottom="28dp"
        android:background="@drawable/spinner_bg_2"
        android:contentDescription="@string/unit_category_description"
        android:spinnerMode="dropdown"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/title"
        app:layout_constraintBottom_toTopOf="@id/input_container"/>
<!--    <androidx.constraintlayout.widget.ConstraintLayout-->
<!--        android:id="@+id/input_container"-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="wrap_content"-->
<!--        app:layout_constraintBottom_toTopOf="@id/output_container"-->
<!--        app:layout_constraintLeft_toLeftOf="parent"-->
<!--        app:layout_constraintRight_toRightOf="parent"-->
<!--        app:layout_constraintTop_toBottomOf="@id/category">-->

        <LinearLayout
            android:id="@+id/input_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/category"
            android:orientation="vertical">
            <LinearLayout
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:weightSum="1"
                android:orientation="horizontal">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/unit_from_in"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/accentColor"
                    android:hint="@string/input_area_initial_val"
                    android:inputType="numberDecimal"
                    android:maxLines="1"
                    android:layout_weight="0.6"
                    android:paddingStart="10dp"
                    android:paddingEnd="10dp"/>

                <Spinner
                    android:id="@+id/unit_from"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/spinner_bg_2"
                    android:contentDescription="@string/unit_from_description"
                    android:layout_weight="0.4"
                    android:layout_marginBottom="20dp"
                    android:layout_marginStart="10dp"/>
            </LinearLayout>
            <LinearLayout
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:weightSum="1"
                android:orientation="horizontal">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/unit_to_out"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/accentColor"
                    android:hint="@string/input_area_initial_val"
                    android:inputType="numberDecimal"
                    android:maxLines="1"
                    android:paddingStart="10dp"
                    android:paddingEnd="10dp"
                    android:layout_weight="0.6" />

                <Spinner
                    android:id="@+id/unit_to"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/spinner_bg_2"
                    android:contentDescription="@string/unit_from_description"
                    android:layout_weight="0.4"
                    android:layout_marginBottom="20dp"
                    android:layout_marginStart="10dp"/>
            </LinearLayout>
        </LinearLayout>




    <!--    </androidx.constraintlayout.widget.ConstraintLayout>-->

<!--    <androidx.constraintlayout.widget.ConstraintLayout-->
<!--        android:id="@+id/output_container"-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:orientation="horizontal"-->
<!--        app:layout_constraintLeft_toLeftOf="parent"-->
<!--        app:layout_constraintRight_toRightOf="parent"-->
<!--        app:layout_constraintTop_toBottomOf="@id/input_container">-->
        <!--        app:layout_constraintBottom_toTopOf="@id/button">-->

<!--        <com.google.android.material.textfield.TextInputEditText-->
<!--            android:id="@+id/unit_to_out"-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:backgroundTint="@color/accentColor"-->
<!--            android:enabled="false"-->
<!--            android:hint="@string/input_area_initial_val"-->
<!--            android:inputType="numberDecimal"-->
<!--            android:maxWidth="250dp"-->
<!--            android:maxLines="1"-->
<!--            android:paddingStart="20dp"-->
<!--            android:paddingEnd="20dp"-->
<!--            app:layout_constraintBottom_toBottomOf="parent"-->
<!--            app:layout_constraintEnd_toStartOf="@id/unit_to"-->
<!--            app:layout_constraintStart_toStartOf="parent"-->
<!--            app:layout_constraintTop_toTopOf="parent" />-->

<!--        <Spinner-->
<!--            android:id="@+id/unit_to"-->
<!--            android:layout_width="70dp"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:background="@drawable/spinner_bg_2"-->
<!--            android:contentDescription="@string/unit_to_description"-->
<!--            android:maxWidth="100dp"-->
<!--            app:layout_constraintBottom_toBottomOf="parent"-->
<!--            app:layout_constraintEnd_toEndOf="parent"-->
<!--            app:layout_constraintTop_toTopOf="parent"-->
<!--            android:layout_marginBottom="20dp"/>-->
<!--    </androidx.constraintlayout.widget.ConstraintLayout>-->

    <!--    <Button-->
    <!--        android:id="@+id/button"-->
    <!--        android:layout_width="350dp"-->
    <!--        android:layout_height="48dp"-->
    <!--        android:layout_marginTop="28dp"-->
    <!--        android:text="@string/btn"-->
    <!--        android:textColor="@color/rich_black"-->
    <!--        app:layout_constraintEnd_toEndOf="parent"-->
    <!--        app:layout_constraintStart_toStartOf="parent"-->
    <!--        app:layout_constraintTop_toBottomOf="@id/output_container" />-->

</androidx.constraintlayout.widget.ConstraintLayout>